--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,15 @@
         <img class="page-header__logo" src="img/logo.png" width="42" height="42" alt="Trip logo">
 
         <div class="trip-main">
+          <section class="trip-main__trip-info">
+            <!-- Информация о путешествии -->
+          </section>
           <div class="trip-main__trip-controls  trip-controls">
             <div class="trip-controls__navigation">
               <h2 class="visually-hidden">Switch trip view</h2>
               <!-- Меню -->
             </div>
+
             <div class="trip-controls__filters">
               <h2 class="visually-hidden">Filter events</h2>
               <!-- Фильтры -->
